# PhysicsEngine2D

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Main.cpp  README.md  imgui.ini
Include/: PhysicsEngine2D.h
Include/DataCore/: DataEditor.h  DataLoader.h  DataStorage.h
Include/DataOperations/: DataEditor.h  DataLoader.h  DataStorage.h
Include/DataOperations/Shapes/: CircleShape.h  PolygonShape.h  RectangleShape.h  Shape.h
Include/Engine/Shapes/: PolygonShape.h
Include/GUIEngine/: Interface.h  Painter.h  Renderer.h  Window.h
Include/GameEngine/: Entity.h  PhysicsEngine2D.h
Include/GameEngine/DataCore/: DataEditor.h  DataLoader.h  DataStorage.h
Include/GameEngine/GUIEngine/: Interface.h  Painter.h  Renderer.h  Window.h
Include/GameEngine/Game/Callbacks/: ClosestRayHit.h  PrinterCollisionListener.h
Include/GameEngine/Game/Entities/: CircleEntity.h  ComplexEntity.h  EntitiesStorage.h  Entity.h  GroundEntity.h  PolygonEntity.h  ShipEntity.h
Include/GameEngine/PhysicsEngine/: CollisionContact.h  CollisionSolver.h  ContactsManager.h  DAABBTree.h  DAABBTree.inl  Engine.h  Fixture.h  Fixture.inl  PhysMath.h  PhysMath.inl  Ray.h  RigidBody.h  RigidBody.inl  Rotation.h  Rotation.inl  ShapeAABB.h  ShapeAABB.inl  World.h
Include/GameEngine/PhysicsEngine/Callbacks/: CollisionListener.h  RayCastCallback.h
Include/GameEngine/PhysicsEngine/Shapes/: CircleShape.h  CircleShape.inl  PolygonShape.h  PolygonShape.inl  Shape.h  Shape.inl
Include/GameEngine/Utils/: Functions.h  Functions.inl
Include/Modules/: Interface.h  Painter.h  Renderer.h  Window.h
Include/Modules/Engine/: CollisionSolver.h  Engine.h  Material.h
Include/PhysicsEngine/: CollisionSolver.h  Engine.h  Material.h
Include/PhysicsEngine/Shapes/: CircleShape.h  PolygonShape.h  Shape.h
Include/Utils/: Functions.h
Sources/: PhysicsEngine2D.cpp
Sources/DataCore/: DataEditor.cpp  DataLoader.cpp  DataStorage.cpp
Sources/DataOperations/: DataEditor.cpp  DataLoader.cpp  DataStorage.cpp
Sources/DataOperations/Shapes/: CircleShape.cpp  PolygonShape.cpp  RectangleShape.cpp  Shape.cpp
Sources/Engine/Shapes/: Shape.cpp
Sources/GUIEngine/: Interface.cpp  Painter.cpp  Renderer.cpp  Window.cpp
Sources/GameEngine/: Entity.cpp  PhysicsEngine2D.cpp
Sources/GameEngine/DataCore/: DataEditor.cpp  DataLoader.cpp  DataStorage.cpp
Sources/GameEngine/GUIEngine/: Interface.cpp  Painter.cpp  Renderer.cpp  Window.cpp
Sources/GameEngine/Game/Callbacks/: ClosestRayHit.cpp  PrinterCollisionListener.cpp
Sources/GameEngine/Game/Entities/: CircleEntity.cpp  ComplexEntity.cpp  EntitiesStorage.cpp  Entity.cpp  GroundEntity.cpp  PolygonEntity.cpp  ShipEntity.cpp
Sources/GameEngine/PhysicsEngine/: CollisionSolver.cpp  ContactsManager.cpp  DAABBTree.cpp  Engine.cpp  Fixture.cpp  PhysMath.cpp  RigidBody.cpp  Rotation.cpp  ShapeAABB.cpp  World.cpp
Sources/GameEngine/PhysicsEngine/Callbacks/: RayCastCallback.cpp
Sources/GameEngine/PhysicsEngine/Shapes/: CircleShape.cpp  PolygonShape.cpp  Shape.cpp
Sources/GameEngine/Utils/: Functions.cpp
Sources/Modules/: Interface.cpp  Painter.cpp  Renderer.cpp  Window.cpp
Sources/Modules/Engine/: CollisionSolver.cpp  Engine.cpp  Material.cpp
Sources/PhysicsEngine/: CollisionSolver.cpp  Engine.cpp  Material.cpp
Sources/PhysicsEngine/Shapes/: CircleShape.cpp  PolygonShape.cpp  Shape.cpp
Sources/Utils/: Functions.cpp
